# phoenix-firmware

./: .gitignore  .gitmodules  LICENSE  README.md
CYPD5125-40LQXI/: Phoenix_CYPD5125-40LQXI.7z  Phoenix_CYPD5125-40LQXI.cywrk  convert_hex.py  factory.hex  firmware.tcl  flash.py  noboot.hex  phoenix-cypd5125.tcl
FPGA/: .gitignore  PhoenixFPGA.qsf  PhoenixFPGA.qws  PhoenixFPGA.sdc  PhoenixFPGA.srf  controller.qsys  controller.sopcinfo  spislave.qsys
FPGA/App/: .gitignore  PhoenixFPGA.ipregen.rpt  PhoenixFPGA.qpf  PhoenixFPGA.qsf  PhoenixFPGA.qws  PhoenixFPGA.sdc  controller.qsys  controller.sopcinfo  spislave.sopcinfo
FPGA/App/chisel/: .gitignore  .scalafmt.conf  Makefile  build.sbt
FPGA/App/controller/: controller.bsf  controller.cmp  controller.csv  controller.html  controller.spd  controller.xml  controller_bb.v  controller_generation.rpt  controller_generation_previous.rpt  controller_inst.v  controller_inst.vhd
FPGA/App/controller/simulation/: controller.sip  controller.v
FPGA/App/controller/synthesis/: controller.debuginfo  controller.qip  controller.regmap  controller.v
FPGA/App/hdl/: avalon_st_clock_bridge.sv  clarke_transform.sv  control_pulse_gen.sv  current_fir_filter.sv  deglitch.sv  ds_pwm_driver.sv  ltc2320.sv  motor_controller.sv  motor_controller_hw.tcl  park_transform.sv  pi_controller.sv  position_estimator.sv  pwm_driver.sv  quadrature_decoder.sv  reset_synchronizer.sv  serial_to_parallel.sv  space_vector_modulator.sv  top.sv  vector_controller.sv  vector_controller_master.sv  vector_controller_master_hw.tcl
FPGA/App/ip/avalon_st_byte_converter/: avalon_st_byte_converter.sv
FPGA/App/ip/avalon_st_uart_bridge/: avalon_st_uart_bridge.sv
FPGA/App/ip/avalon_st_uart_tx/: avalon_st_uart_tx.sv  avalon_st_uart_tx_hw.tcl
FPGA/App/output_files/: PhoenixFPGA.sof  output_file.cof
FPGA/App/spislave/: spislave.bsf  spislave.cmp  spislave.xml  spislave_bb.v  spislave_generation.rpt  spislave_inst.v
FPGA/Boot/: .gitignore  PhoenixFPGA.qsf  PhoenixFPGA.sdc
FPGA/Boot/hdl/: rsu.qsys  rsu.sopcinfo
FPGA/Boot/output_files/: PhoenixFPGA.sof
FPGA/Factory/hdl/: top.sv
FPGA/Factory/output_files/: PhoenixFPGA.sof  output_file.cof
FPGA/controller/: controller.bsf  controller.cmp  controller.html  controller.xml  controller_bb.v  controller_generation.rpt  controller_generation_previous.rpt  controller_inst.v  controller_inst.vhd
FPGA/controller/synthesis/: controller.debuginfo  controller.qip  controller.regmap  controller.v
FPGA/hdl/: avalon_st_clock_bridge.sv  avalon_st_clock_bridge_hw.tcl  clarke_transform.sv  current_cic_filter.sv  current_fir_filter.sv  deglitch.sv  ds_pwm_driver.sv  ltc2320.sv  motor_controller_hw.tcl  park_transform.sv  pi_controller.sv  pll.ppf  pll.qip  pll.v  pwm_driver.sv  serial_to_parallel.sv  space_vector_modulator.sv  top.sv  vector_controller.sv  vector_controller_master.sv
FPGA/ip/avalon_st_byte_converter/: avalon_st_byte_converter_hw.tcl
FPGA/ip/avalon_st_uart_bridge/: avalon_st_uart_bridge_hw.tcl
FPGA/ip/avalon_st_uart_tx/: avalon_st_uart_tx_hw.tcl
FPGA/ip/imu_spim/: imu_spim.sv  imu_spim_hw.tcl
FPGA/spislave/: spislave.html  spislave_generation_previous.rpt  spislave_inst.vhd
FPGA/spislave/synthesis/: spislave.debuginfo  spislave.qip  spislave.v
Jetson/ros2/: plot_motors.plt
Jetson/ros2/src/phoenix/: CMakeLists.txt  package.xml
Jetson/ros2/src/phoenix/include/phoenix/: shared_memory.hpp  stream_data.hpp
Jetson/ros2/src/phoenix/launch/: all.py
Jetson/ros2/src/phoenix/src/: adc3_main.cpp  ads1015.cpp  avalon_mm.cpp  avalon_mm.hpp  command_main.cpp  epcq.cpp  epcq.hpp  i2c.cpp  i2c.hpp  spi.cpp  stream_main.cpp  uart.cpp
Jetson/ros2/src/phoenix_gui/: CMakeLists.txt  package.xml
Jetson/ros2/src/phoenix_gui/src/: format_value.hpp  gamepad_thread.cpp  gamepad_thread.hpp  image_viewer.cpp  image_viewer.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  node_thread.cpp  node_thread.hpp
Jetson/ros2/src/phoenix_gui/src/cintelhex/: ihex_parse.c
Jetson/ros2/src/phoenix_msgs/: CMakeLists.txt  package.xml
Jetson/ros2/src/phoenix_msgs/msg/: StreamDataControl.msg  StreamDataMotion.msg
Jetson/ros2/src/phoenix_msgs/srv/: ProgramFpga.srv  ProgramNios.srv  SetSpeed.srv
ROS2/: .gitignore
ROS2/src/phoenix/: CMakeLists.txt
ROS2/src/phoenix_test/: CMakeLists.txt
SLG46826G/: PhoenixGP.gp6  PhoenixGP_Demo.gp6  PhoenixGP_Test.gp6  PhoenixGP_without_Jetson.gp6
(+833 files in other folders)
